CMAKE_MINIMUM_REQUIRED(VERSION 3.25.0)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build-version/")

FIND_LIBRARY(LIBC_SO_PATH NAMES c PATHS "/lib/*")
IF ("${LIBC_SO_PATH}" STREQUAL "LIBC_SO_PATH-NOTFOUND")
  MESSAGE(FATAL_ERROR "Could not locate libc.so")
ENDIF ()
MESSAGE(STATUS "Found libc: ${LIBC_SO_PATH}")

INCLUDE(build_version)

PROJECT("bind2iface" VERSION ${GIT_TAG_VERSION} LANGUAGES C)

MESSAGE(STATUS "Build version: ${BUILD_VERSION}")
MESSAGE(STATUS "Building: ${PROJECT_NAME} v${PROJECT_VERSION}")
# ADD_DEFINITIONS(-DLIBC_SO="${LIBC_SO_VALUE}")
ADD_LIBRARY(${PROJECT_NAME} SHARED src/bind2iface.c)
SET_TARGET_PROPERTIES(
  ${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION 1
)
SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
