CMAKE_MINIMUM_REQUIRED(VERSION 3.25.0)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build-version/")

FIND_FILE(LIBC_SO_PATH NAMES libc.so.6 PATHS "/lib/*")
IF ("${LIBC_SO_PATH}" STREQUAL "LIBC_SO_PATH-NOTFOUND")
  MESSAGE(FATAL_ERROR "Could not locate libc.so")
ENDIF ()
MESSAGE(STATUS "Found libc: ${LIBC_SO_PATH}")
GET_FILENAME_COMPONENT(LIBC_SO ${LIBC_SO_PATH} NAME)

INCLUDE(build_version)

PROJECT("bind2iface" VERSION ${GIT_TAG_VERSION} LANGUAGES C)

MESSAGE(STATUS "Build version: ${BUILD_VERSION}")
MESSAGE(STATUS "Building: ${PROJECT_NAME} v${PROJECT_VERSION}")

ADD_DEFINITIONS(-DLIBC_SO="${LIBC_SO}")

ADD_LIBRARY(${PROJECT_NAME} SHARED src/lib/bind2iface.c)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE src/)
SET_TARGET_PROPERTIES(
  ${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION 1
)

ADD_EXECUTABLE(${PROJECT_NAME}_exec src/main.c)
SET_TARGET_PROPERTIES(
  ${PROJECT_NAME}_exec PROPERTIES OUTPUT_NAME ${PROJECT_NAME}
)

SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")

SET(CMAKE_INSTALL_PREFIX "$ENV{HOME}")
INSTALL(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_exec DESTINATION bin)
